Some improvements to the /feed component
* Added a Backbone Router to support bookmarkable pages
* Display loading spinners while waiting for XMLHttpRequests
* Changed the Article serializer to return a nicer representation of the author
* Some other improvements to the general UI at /feed

--- a/blog/templates/blog/article.html
+++ b/blog/templates/blog/article.html
@@ -29,6 +29,10 @@
             </a>
           </li>
         </ul>
+      {% else %}
+      <a class="back display-articles" href="{% url 'display_articles' %}" title="Back to articles">
+        <i class="fa fa-reply fa-2x"></i>
+      </a>
       {% endif %}
       </div>
       <div class="img-container">
