--- a/static/css/main.less
+++ b/static/css/main.less
@@ -187,6 +187,9 @@ input:-webkit-autofill:focus {
   li { padding: 0; }
 }
 
+#feed-container { .fa-spin { text-align: center; } }
+
+
 ///// Blog Post /////
 
 #article {
@@ -205,12 +208,14 @@ input:-webkit-autofill:focus {
       &:hover { cursor: pointer; }
     }
   }
+  .display-articles { float: right; }
   .fa-trash { color: #C92228 }
   .fa-pencil-square { color: #dd4b39; }
   .fa-facebook-official { color: @blue-facebook; }
   .fa-google-plus-square { color: @orange-googleplus; }
   .fa-twitter-square { color: @blue-twitter; }
   .fa-pinterest-square { color: @red-pinterest; }
+
 }
 
 ///// Comments /////
