Removes some DRY from the title block in templates.

--- a/blog/templates/blog/create_or_edit_article.html
+++ b/blog/templates/blog/create_or_edit_article.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
 
 {% block title %}
-Potato Blog | Create Article
+    {% if form.title.value %}
+        Edit Article
+    {% else %}
+        Create Article
+    {% endif %}
 {% endblock %}
 
 {% block main %}
