--- a/blog/templates/blog/feed.html
+++ b/blog/templates/blog/feed.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+Feed
+{% endblock %}
+
 {% block main %}
 <div class="container">
   <div id="feed-container"></div>
