--- a/templates/base.html
+++ b/templates/base.html
@@ -13,10 +13,7 @@
     <!-- if we weren't compiling client side this would be at end of body -->
     <script src="{% static 'js/libs/less.min.js' %}"></script>
 
-    <title>
-      {% block title %}
-      {% endblock %}
-    </title>
+    <title>Djangae Example | {% block title %} {% endblock %}</title>
   </head>
   <body>
     {% include 'nav.html' %}
